--- a/web.html
+++ b/web.html
@@ -28,11 +28,12 @@
             <h2><ins>What is Git?</ins></h2>
             <p>Git is a version control system that helps developers track changes in their code and collaborate with
                 others.</p>
+            <p>by Alituha Shabella Ntuha 25/BSE/BU/R/0016</p>
             <button>Click to read more</button>
         </section>
     </main>
     <footer>
-        <p>&copy;2025 by Alituha Shabella Ntuha 25/BSE/BU/R/0016.All rights reserved.</p>
+        <p>&copy;2025 by Ntuha.All rights reserved.</p>
     </footer>
 
 </body>
