--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <li>Git Desktop</li>
             <li>Git Desktop pages</li>
         </ul>
-        <img src="/WhatsApp Image 2025-10-06 at 14.06.40_5295cff5.jpg" alt="">
+
+        <img src="/download (1).jpg" alt="">
     </nav>
     <main>
         <section>
