--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <li>Git Desktop pages</li>
         </ul>
 
-        <img src="/download (1).jpg" alt="">
+        <img src="/download (1).jpg" width="300px" height="250px">
     </nav>
     <main>
-        <section>
+        <section class="sectionstyle">
             <h2><ins>What is Git?</ins></h2>
             <p>Git is a version control system that helps developers track changes in their code and collaborate with
                 others.</p>
