--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li>Git Desktop pages</li>
         </ul>
 
-        <img src="/download (1).jpg" width="300px" height="250px">
+        <img src="download (1).jpg" width="300px" height="250px">
     </nav>
     <main>
         <section class="sectionstyle">
