--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li>Git Desktop pages</li>
         </ul>
 
-        <img src="download (1).jpg" width="300px" height="250px">
+        <img src="image1.jpg" width="200px" height="230px">
     </nav>
     <main>
         <section class="sectionstyle">
@@ -32,6 +32,7 @@
             <button>Click to read more</button>
         </section>
     </main>
+
     <footer>
         <p>&copy;2025 by Alituha Shabella Ntuha 25/BSE/BU/R/0016.All rights reserved.</p>
     </footer>
